--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/dasar"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -28,11 +29,13 @@
             android:layout_height="match_parent"
             android:text="Selamat Datang di DILo Malang"
             android:textAlignment="center"
+            android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/btnCheckin"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="5dp"
@@ -40,8 +43,7 @@
         android:background="#d9201b"
         android:clickable="true"
         android:orientation="horizontal"
-        android:padding="16dp"
-        android:id="@+id/btnCheckin">
+        android:padding="16dp">
 
         <ImageView
             android:layout_width="40dp"
@@ -61,6 +63,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/btnAboutDilo"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
@@ -68,8 +71,7 @@
         android:background="#d9201b"
         android:clickable="true"
         android:orientation="horizontal"
-        android:padding="16dp"
-        android:id="@+id/btnAboutDilo">
+        android:padding="16dp">
 
         <ImageView
             android:layout_width="40dp"
@@ -89,6 +91,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/btnAboutDev"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
@@ -96,8 +99,7 @@
         android:background="#d9201b"
         android:clickable="true"
         android:orientation="horizontal"
-        android:padding="16dp"
-        android:id="@+id/btnAboutDev">
+        android:padding="16dp">
 
         <ImageView
             android:layout_width="40dp"
@@ -117,6 +119,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/btnVisit"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
@@ -124,8 +127,7 @@
         android:background="#d9201b"
         android:clickable="true"
         android:orientation="horizontal"
-        android:padding="16dp"
-        android:id="@+id/btnVisit">
+        android:padding="16dp">
 
         <ImageView
             android:layout_width="40dp"
@@ -156,8 +158,8 @@
             android:layout_height="match_parent"
             android:text="Check in untuk Menggunakan Fasilitas DILo Malang"
             android:textAlignment="center"
-            android:textStyle="bold"
+            android:textColor="@android:color/black"
             android:textSize="20sp"
-            />
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
